[gd_scene load_steps=4 format=3 uid="uid://crgg7t3brkglv"]

[ext_resource type="Script" uid="uid://bs3uyjy004rv" path="res://robotSelectionGUI.gd" id="1_kxtip"]
[ext_resource type="PackedScene" uid="uid://dgavxffs1bt07" path="res://src/fields/2019-DeepSpace/2019_field.tscn" id="2_f1sbm"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_1x3lf"]
color = Color(0.724643, 0.724643, 0.724643, 1)
thickness = 5
vertical = true

[node name="base" type="Node3D"]
process_mode = 3

[node name="RobotSelectionGUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -107.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("1_kxtip")

[node name="MarginContainer" type="MarginContainer" parent="RobotSelectionGUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -37.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="PanelContainer" type="PanelContainer" parent="RobotSelectionGUI/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="RobotSelectionGUI/MarginContainer/PanelContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="RobotSelectionGUI/MarginContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="RobotSelectionGUI/MarginContainer/PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Select Robot"
horizontal_alignment = 1

[node name="robotOptions" type="OptionButton" parent="RobotSelectionGUI/MarginContainer/PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
alignment = 1

[node name="VSeparator" type="VSeparator" parent="RobotSelectionGUI/MarginContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 200
theme_override_styles/separator = SubResource("StyleBoxLine_1x3lf")

[node name="Button" type="Button" parent="RobotSelectionGUI/MarginContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Continue"

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-3.78552e-08, 0.5, -0.866025, 2.18557e-08, 0.866025, 0.5, 1, 0, -4.37114e-08, -10.3471, 7.002, 0)
current = true

[node name="2019-Field" parent="." instance=ExtResource("2_f1sbm")]

[connection signal="item_selected" from="RobotSelectionGUI/MarginContainer/PanelContainer/HBoxContainer/VBoxContainer/robotOptions" to="RobotSelectionGUI" method="_on_robot_options_item_selected"]
